@@ -49,10 +49,12 @@
    | Top level directories in the project source structure.
    +-->
   <property name = "src.dir" value = "src"/>
+  <property name = "samsungtv-src.dir" value = "samsungtv-src"/>
   <property name = "test.dir" value = "test"/>
   <property name = "lib.dir" value = "lib"/>
   <property name = "build.dir" value = "build"/>
   <property name = "classes.dir" value = "${build.dir}/classes"/>
+  <property name = "samsungtv-classes.dir" value = "${build.dir}/samsungtv-classes"/>
   <property name = "output.dir" value = "output"/>
   <property name = "output.controller.dir" value = "${output.dir}/OpenRemote-Controller-${version}/webapps/controller"/>
   <property name = "runtime.dir" value = "runtime/apache-tomcat-6.0.18"/>
@@ -113,6 +115,12 @@
     <fileset dir = "${lib.dir}/json-path" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/rrd4j-2.1.1" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/jzmq" includes = "**/*.jar"/>
+  </path>
+
+  <path id = "samsungtv.compile.path.id">
+    <path location = "${classes.dir}"/>
+
+    <path refid = "compile.path.id"/>
   </path>
 
   <!--
@@ -301,6 +309,16 @@
            debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
     </javac>
+
+    <!--
+     | Compile samsungtv protocol specific classes
+     +-->
+    <mkdir dir = "${samsungtv-classes.dir}"/>
+ 
+    <javac destdir = "${samsungtv-classes.dir}" classpathref = "samsungtv.compile.path.id"
+           debug = "${build.debug}" encoding = "${default.javac.encoding}">
+      <src path = "${samsungtv-src.dir}"/>
+    </javac>
   </target>
 
 
@@ -364,7 +382,9 @@
      | Copy compiled classes into the controller web app...
      +-->
     <copy todir = "${output.controller.dir}/WEB-INF/classes">
-      <fileset dir = "${classes.dir}"/>
+      <fileset dir = "${classes.dir}">
+        <exclude name = "org/openremote/controller/protocol/samsungtv/**"/>
+      </fileset>
     </copy>
 
     <!--
@@ -375,6 +395,13 @@
     </copy>
 
     <!--
+     | Create a separate jar with the "dummy" samsungtv protocol, packaged with controller
+     +-->
+    <jar destfile = "${output.controller.dir}/WEB-INF/lib/samsungtv.jar" basedir = "${classes.dir}">
+        <include name = "org/openremote/controller/protocol/samsungtv/**"/>
+    </jar>
+
+    <!--
      | Zip it up...
      +-->
     <zip basedir = "${output.dir}"
@@ -382,6 +409,13 @@
          whenempty = "fail">
 
     </zip> 
+
+    <!--
+     | Create a separate jar with the "real" samsungtv protocol
+     +-->
+    <jar destfile= "${output.dir}/samsungtv.jar" basedir = "${samsungtv-classes.dir}">
+        <include name = "org/openremote/controller/protocol/samsungtv/**"/>
+    </jar>
 
   </target>
 
@@ -410,7 +444,10 @@
       <lib dir = "${build.dir}/lib"/>
       <lib dir = "${lib.dir}/clink"/>
       <lib dir = "${lib.dir}/drools-5.1.1"/>
-      <classes dir = "${classes.dir}"/>
+      <classes dir = "${classes.dir}">
+        <exclude name = "org/openremote/controller/protocol/samsungtv/**"/>
+      </classes>
+
     </war>
   </target>
 -->
