@@ -145,20 +145,6 @@ isy99.password=admin
 #
 #------------------------------------------------ end of ISY-99 ------
 
-
-#-----------------------------------------------------------------------
-#
-# Samsung TV CONFIGURATION:
-# 
-# Configuration related to Samsung TV remote control protocol
-
-##
-# IP-Address of the Samsung TV to use
-samsungTV.interface.ip=192.168.100.15
-
-#
-#----------------------------------------- end of Samsung TV ---------
-
 #-----------------------------------------------------------------------
 #
 # RUSSOUND CONFIGURATION:
